# agentlens

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  anomaly.py  auth.py  database.py  demo_data.py  encryption.py  main.py  metrics.py  otel.py  requirements.txt  retention.py  tls.py
dashboard/: index.html  nginx.conf  package.json  vite.config.js
dashboard/src/: App.jsx  api.js
docs/: migrating-from-langfuse.md
examples/: demo_agent.py
grafana/: agentlens-dashboard.json
helm/agentlens/: Chart.yaml  values.yaml
helm/agentlens/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml
scripts/: record-demo.ps1  test_graph.py  test_live.py  test_sdk_e2e.py  test_trace_tree.py
sdk/go/: agentlens.go
sdk/go/example/: main.go
sdk/java/src/io/agentlens/: AgentLens.java
sdk/javascript/: agentlens.js  example.js  package.json
sdk/python/: MANIFEST.in  README.md  build_and_publish.py  pyproject.toml  setup.py
sdk/python/agentlens/: __init__.py  builtin_plugins.py  cli.py  client.py  decorators.py  events.py  plugins.py
sdk/python/agentlens/integrations/: __init__.py  anthropic.py  auto.py  crewai.py  google_adk.py  langchain.py  litellm.py  mcp.py  openai.py
sdk/rest-api/: examples.sh
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
sdk/typescript/src/patches/: anthropic.ts  index.ts  openai.ts
tests/backend/: test_api.py
tests/sdk/: test_sdk.py
